--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -63,7 +63,7 @@
     "ng-in-viewport": "^6.1.0",
     "ng5-slider": "^1.1.13",
     "ngx-avatar": "^3.3.5",
-    "ngx-markdown": "6.0.0 - 6.2.0",
+    "ngx-markdown": "^8.2.1",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.14.0",
