--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,6 +25,8 @@
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
+    "@angular-react/core": "4.1.0",
+    "@angular-react/fabric": "4.1.0",
     "@angular/animations": "^10.2.5",
     "@angular/cdk": "^7.3.7",
     "@angular/common": "10.2.5",
@@ -41,6 +43,7 @@
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
+    "@uifabric/azure-themes": "7.3.0",
     "adal-angular4": "^3.0.16",
     "admin-lte": "^2.4.3",
     "angular-split-ng6": "^1.0.0-rc.5",
@@ -58,12 +61,15 @@
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
     "ng5-slider": "^1.1.13",
+    "ngx-avatar": "^4.1.0",
+    "ngx-markdown": "^10.1.1",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.14.0",
-    "office-ui-fabric-core": "11.0.0",
-    "office-ui-fabric-react": "7.82.2",
+    "office-ui-fabric-core": "11.0.1",
+    "office-ui-fabric-react": "7.193.0",
     "pdfmake": "^0.1.72",
+    "process": "^0.11.10",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
     "reconnecting-websocket": "^4.4.0",
