--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -27,17 +27,17 @@
   "dependencies": {
     "@angular-react/core": "3.0.0",
     "@angular-react/fabric": "3.0.0",
-    "@angular/animations": "^9.1.13",
+    "@angular/animations": "^10.2.5",
     "@angular/cdk": "^7.3.7",
-    "@angular/common": "9.1.13",
-    "@angular/compiler": "9.1.13",
-    "@angular/core": "9.1.13",
-    "@angular/forms": "9.1.13",
+    "@angular/common": "10.2.5",
+    "@angular/compiler": "10.2.5",
+    "@angular/core": "10.2.5",
+    "@angular/forms": "10.2.5",
     "@angular/material": "^7.3.7",
-    "@angular/platform-browser": "9.1.13",
-    "@angular/platform-browser-dynamic": "9.1.13",
-    "@angular/router": "9.1.13",
-    "@angular/upgrade": "9.1.13",
+    "@angular/platform-browser": "10.2.5",
+    "@angular/platform-browser-dynamic": "10.2.5",
+    "@angular/router": "10.2.5",
+    "@angular/upgrade": "10.2.5",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
@@ -74,7 +74,7 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.2.2",
-    "tslib": "^1.10.0",
+    "tslib": "^2.0.0",
     "ua-parser-js": "^0.7.19",
     "vis": "^4.21.0",
     "vscode-ws-jsonrpc": "^0.2.0",
@@ -83,12 +83,12 @@
   },
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.0.2",
-    "@angular-devkit/build-angular": "~0.901.15",
-    "@angular-devkit/build-ng-packagr": "~0.901.15",
+    "@angular-devkit/build-angular": "~0.1002.4",
+    "@angular-devkit/build-ng-packagr": "~0.1002.4",
     "@angular-devkit/build-optimizer": "~0.800.3",
-    "@angular/cli": "9.1.15",
-    "@angular/compiler-cli": "9.1.13",
-    "@angular/language-service": "^9.1.13",
+    "@angular/cli": "10.2.4",
+    "@angular/compiler-cli": "10.2.5",
+    "@angular/language-service": "^10.2.5",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
@@ -98,20 +98,20 @@
     "codelyzer": "^5.1.2",
     "concurrently": "^4.1.0",
     "jasmine": "^3.0.0",
-    "jasmine-core": "^3.0.0",
-    "karma": "~2.0.0",
-    "karma-chrome-launcher": "~2.2.0",
+    "jasmine-core": "~3.5.0",
+    "karma": "~5.0.0",
+    "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^9.0.0",
-    "protractor": "5.3.2",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
+    "karma-jasmine": "~4.0.0",
+    "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.1.0",
+    "protractor": "~7.0.0",
     "rxjs-tslint": "^0.1.3",
     "selfsigned": "^1.10.2",
     "ts-node": "~4.1.0",
-    "tslint": "~5.9.1",
-    "typescript": "~3.6.4",
+    "tslint": "~6.1.0",
+    "typescript": "~4.0.8",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
