--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -39,6 +39,7 @@
     "@angular/router": "10.2.5",
     "@angular/upgrade": "10.2.5",
     "@microsoft/applicationinsights-web": "^2.5.4",
+    "@ng-select/ng-select": "^5.0.15",
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
@@ -61,7 +62,8 @@
     "ng-in-viewport": "^6.1.0",
     "ng-pick-datetime": "^6.0.16",
     "ng5-slider": "^1.1.13",
-    "ngx-markdown": "^9.1.1",
+    "ngx-avatar": "^3.7.0",
+    "ngx-markdown": "^10.1.1",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^6.0.1",
