--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -83,7 +83,7 @@
                 }
               ]
             },
-            "nationalcloud-production":{
+            "nationalcloud-production": {
               "fileReplacements": [
                 {
                   "replace": "projects/applens/src/environments/environment.ts",
@@ -104,7 +104,7 @@
               "vendorChunk": false,
               "buildOptimizer": true
             },
-            "nationalcloud-local":{
+            "nationalcloud-local": {
               "fileReplacements": [
                 {
                   "replace": "projects/applens/src/environments/environment.ts",
@@ -216,13 +216,13 @@
           "options": {
             "tsConfig": "projects/diagnostic-data/tsconfig.lib.json",
             "project": "projects/diagnostic-data/ng-package.json"
-          }
-        ,          "configurations": {
+          },
+          "configurations": {
             "production": {
               "tsConfig": "projects/diagnostic-data/tsconfig.lib.prod.json"
             }
           }
-},
+        },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
@@ -425,5 +425,8 @@
       "style": "scss"
     },
     "@schematics/angular:directive": {}
+  },
+  "cli": {
+    "analytics": false
   }
 }
