--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -48,8 +48,10 @@
     "admin-lte": "^2.4.3",
     "angular-split-ng6": "^1.0.0-rc.5",
     "bootstrap": "^3.4.1",
+    "classnames": "^2.3.1",
     "copy-html-to-clipboard": "^4.0.1",
     "core-js": "^3.6.5",
+    "css-to-style": "^1.4.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.1.2",
@@ -66,7 +68,6 @@
     "ngx-markdown": "^10.1.1",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
-    "node-sass": "^6.0.1",
     "office-ui-fabric-core": "11.0.0",
     "office-ui-fabric-react": "7.82.2",
     "pdfmake": "^0.1.72",
@@ -76,6 +77,8 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.2.2",
+    "sass": "^1.54.4",
+    "stylenames": "^1.1.6",
     "tslib": "^2.0.0",
     "ua-parser-js": "^0.7.19",
     "vis": "^4.21.0",
