--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "10.2.5",
     "@angular/router": "10.2.5",
     "@angular/upgrade": "10.2.5",
+    "@joelwenzel/ng-flowchart": "^1.0.0-beta.12",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^5.0.15",
     "@types/highcharts": "^7.0.0",
