--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,18 +25,22 @@
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
-    "@angular/cdk": "^10.2.4",
-    "@angular/common": "10.2.5",
-    "@angular/compiler": "10.2.5",
-    "@angular/core": "10.2.5",
-    "@angular/forms": "10.2.5",
-    "@angular/platform-browser": "10.2.5",
-    "@angular/platform-browser-dynamic": "10.2.5",
-    "@angular/router": "10.2.5",
-    "@angular/upgrade": "10.2.5",
+    "@angular-react/core": "^4.0.0",
+    "@angular-react/fabric": "^4.0.0",
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
+    "@angular/common": "11.2.14",
+    "@angular/compiler": "11.2.14",
+    "@angular/core": "11.2.14",
+    "@angular/forms": "11.2.14",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "11.2.14",
+    "@angular/platform-browser-dynamic": "11.2.14",
+    "@angular/router": "11.2.14",
+    "@angular/upgrade": "11.2.14",
     "@joelwenzel/ng-flowchart": "^1.0.0-beta.12",
     "@microsoft/applicationinsights-web": "^2.5.4",
-    "@ng-select/ng-select": "^5.0.15",
+    "@ng-select/ng-select": "^6.1.0",
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
@@ -59,9 +63,10 @@
     "moment": "^2.22.1",
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
-    "ng-pick-datetime": "^6.0.16",
+    "ng-pick-datetime": "^7.0.0",
     "ng5-slider": "^1.1.13",
-    "ngx-markdown": "^10.1.1",
+    "ngx-avatar": "^4.1.0",
+    "ngx-markdown": "^11.1.3",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "office-ui-fabric-core": "11.0.0",
@@ -85,28 +90,27 @@
   "devDependencies": {
     "@angular-builders/custom-webpack": "8.0.2",
     "@angular-devkit/build-angular": "~0.1102.19",
-    "@angular-devkit/build-ng-packagr": "~0.1002.4",
     "@angular-devkit/build-optimizer": "~0.800.3",
-    "@angular/cli": "10.2.4",
-    "@angular/compiler-cli": "10.2.5",
-    "@angular/language-service": "^10.2.5",
+    "@angular/cli": "11.2.19",
+    "@angular/compiler-cli": "11.2.14",
+    "@angular/language-service": "^11.2.14",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
     "@types/ua-parser-js": "^0.7.32",
     "@types/vscode": "1.67.0",
     "awesome-typescript-loader": "^2.2.1",
-    "codelyzer": "^5.1.2",
+    "codelyzer": "^6.0.0",
     "concurrently": "^4.1.0",
     "jasmine": "^3.0.0",
-    "jasmine-core": "~3.5.0",
-    "karma": "~5.0.0",
+    "jasmine-core": "~3.8.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
     "karma-cli": "~1.0.1",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
-    "ng-packagr": "^10.1.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "rxjs-tslint": "^0.1.3",
     "selfsigned": "^1.10.2",
