--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -8,7 +8,7 @@
     "applens": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens --aot --optimization=false",
     "ncloud-applens-prod": "ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
     "ncloud-applens-local": "ng serve applens --configuration=nationalcloud-local --aot --optimization=false",
-    "ssl": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --sslCert ./ssl/server.crt --sslKey ./ssl/server.key",
+    "ssl": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
     "ssl-local": "npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
@@ -38,6 +38,7 @@
     "@angular/platform-browser-dynamic": "11.2.14",
     "@angular/router": "11.2.14",
     "@angular/upgrade": "11.2.14",
+    "@fluentui/react": "^8.47.3",
     "@joelwenzel/ng-flowchart": "^1.0.0-beta.12",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^6.1.0",
@@ -64,13 +65,12 @@
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
     "ng-pick-datetime": "^7.0.0",
+    "ng-pick-datetime-moment": "^1.0.8",
     "ng5-slider": "^1.1.13",
     "ngx-avatar": "^4.1.0",
     "ngx-markdown": "^11.1.3",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
-    "office-ui-fabric-core": "11.0.0",
-    "office-ui-fabric-react": "7.132.0",
     "pdfmake": "^0.1.72",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
