--- a/AngularApp/projects/diagnostic-data/package.json
+++ b/AngularApp/projects/diagnostic-data/package.json
@@ -2,8 +2,8 @@
   "name": "diagnostic-data",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "8.0.2",
-    "@angular/core": "8.0.2",
+    "@angular/common": "11.2.14",
+    "@angular/core": "11.2.14",
     "copy-html-to-clipboard": "^4.0.1",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "ngx-monaco-editor": "^6.0.0"
@@ -13,11 +13,11 @@
     "react-dom": "16.3.2",
     "@types/react": "16.3.11",
     "@types/react-dom": "16.0.5",
-    "@angular-react/core": "1.0.1",
-    "@angular-react/fabric": "1.2.1",
-    "office-ui-fabric-react": "5.82.4",
-    "@angular/common": "8.0.2",
-    "@angular/core": "8.0.2",
+    "@angular-react/core": "4.0.0",
+    "@angular-react/fabric": "4.0.0",
+    "@fluentui/react": "^8.47.3",
+    "@angular/common": "11.2.14",
+    "@angular/core": "11.2.14",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "copy-html-to-clipboard": "^4.0.1",
     "ngx-monaco-editor": "^6.0.0",
