Adding missing packages needed for Ang9 Migration

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -25,12 +25,15 @@
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
   "dependencies": {
+    "@angular-react/core": "^1.0.0",
+    "@angular-react/fabric": "3.0.0",
     "@angular/animations": "^8.2.14",
-    "@angular/cdk": "^7.3.7",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "8.2.14",
     "@angular/compiler": "8.2.14",
     "@angular/core": "8.2.14",
     "@angular/forms": "8.2.14",
+    "@angular/material": "^8.2.3",
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
@@ -56,6 +59,7 @@
     "moment": "^2.22.1",
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
+    "ngx-markdown": "^8.2.2",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.14.0",
     "pdfmake": "^0.1.72",
