--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -59,7 +59,9 @@
     "moment": "^2.22.1",
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
+    "ng5-slider": "^1.2.6",
     "ngx-markdown": "^8.2.2",
+    "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "node-sass": "^4.14.0",
     "pdfmake": "^0.1.72",
