Adding Ngx-Avatar

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -60,6 +60,7 @@
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
     "ng5-slider": "^1.2.6",
+    "ngx-avatar": "^3.7.0",
     "ngx-markdown": "^8.2.2",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
