--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -26,13 +26,22 @@
   },
   "dependencies": {
     "@angular-devkit/core": "^12.2.17",
+    "@angular-react/core": "^4.0.0",
+    "@angular-react/fabric": "^4.0.0",
+    "@angular/animations": "^11.2.14",
+    "@angular/cdk": "^11.2.13",
     "@angular/common": "11.2.14",
     "@angular/compiler": "11.2.14",
     "@angular/core": "11.2.14",
+    "@angular/forms": "^11.2.14",
+    "@angular/material": "^11.2.13",
+    "@angular/platform-browser": "^11.2.14",
     "@angular/platform-browser-dynamic": "11.2.14",
     "@angular/router": "11.2.14",
     "@angular/upgrade": "11.2.14",
+    "@fluentui/react": "^8.47.3",
     "@microsoft/applicationinsights-web": "^2.5.4",
+    "@ng-select/ng-select": "^6.1.0",
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
@@ -41,8 +50,10 @@
     "admin-lte": "^2.4.3",
     "angular-split-ng6": "^1.0.0-rc.5",
     "bootstrap": "^3.4.1",
+    "classnames": "^2.3.1",
     "copy-html-to-clipboard": "^4.0.1",
     "core-js": "^3.6.5",
+    "css-to-style": "^1.4.0",
     "font-awesome": "^4.7.0",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.1.2",
@@ -53,8 +64,11 @@
     "moment": "^2.22.1",
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
+    "ng5-slider": "^1.1.13",
+    "ngx-avatar": "^4.1.0",
+    "ngx-markdown": "^11.1.3",
     "ngx-monaco-editor": "^8.1.1",
-    "node-sass": "^4.14.0",
+    "ngx-smart-modal": "^6.0.4",
     "pdfmake": "^0.1.72",
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
@@ -62,6 +76,8 @@
     "reflect-metadata": "^0.1.3",
     "rxjs": "6.6.7",
     "rxjs-compat": "6.2.2",
+    "sass": "^1.54.4",
+    "stylenames": "^1.1.6",
     "tslib": "^2.0.0",
     "ua-parser-js": "^0.7.19",
     "vis": "^4.21.0",
@@ -90,6 +106,7 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^11.2.4",
     "protractor": "~7.0.0",
     "rxjs-tslint": "^0.1.3",
     "selfsigned": "^1.10.2",
