--- a/AngularApp/projects/app-service-diagnostics/tsconfig.app.json
+++ b/AngularApp/projects/app-service-diagnostics/tsconfig.app.json
@@ -10,5 +10,8 @@
   ],
   "include": [
     "projects/app-service-diagnostics/src/**/*.d.ts"
-  ]
+  ],
+  "angularCompilerOptions": {
+    "enableIvy": false
+  }
 }
