Making sure that other projects build successfully

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -8,7 +8,7 @@
     "applens": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens --aot --optimization=false",
     "ncloud-applens-prod": "ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
     "ncloud-applens-local": "ng serve applens --configuration=nationalcloud-local --aot --optimization=false",
-    "ssl": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --sslCert ./ssl/server.crt --sslKey ./ssl/server.key",
+    "ssl": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
     "ssl-local": "npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
@@ -39,7 +39,6 @@
     "@angular/platform-browser-dynamic": "11.2.14",
     "@angular/router": "11.2.14",
     "@angular/upgrade": "11.2.14",
-    "@fluentui/react": "^8.47.3",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^6.1.0",
     "@types/highcharts": "^7.0.0",
