--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -27,8 +27,8 @@
   "dependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
     "@angular-devkit/core": "^11.2.19",
-    "@angular-react/core": "^4.0.0",
-    "@angular-react/fabric": "^4.0.0",
+    "@angular-react/core": "~4.0.2",
+    "@angular-react/fabric": "~4.0.2",
     "@angular/animations": "^11.2.14",
     "@angular/cdk": "^11.2.13",
     "@angular/common": "11.2.14",
