Fix contentStyle and enabling Ivy on ASD project

--- a/AngularApp/projects/app-service-diagnostics/tsconfig.app.json
+++ b/AngularApp/projects/app-service-diagnostics/tsconfig.app.json
@@ -12,6 +12,6 @@
     "projects/app-service-diagnostics/src/**/*.d.ts"
   ],
   "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": true
   }
 }
