--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -16,7 +16,8 @@
     "build-ncloud-applens-prod": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-production",
     "build-ncloud-applens-local": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-local",
     "build-asd": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --prod --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true",
-    "build": "npm run build-lib && npm run build-applens && npm run build-asd",
+    "build-ng-flowchart": "ng build ng-flowchart --prod",
+    "build": "npm run build-lib && npm run build-applens && npm run build-asd && npm run build-ng-flowchart",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -40,6 +41,7 @@
     "@angular/platform-browser-dynamic": "11.2.14",
     "@angular/router": "11.2.14",
     "@angular/upgrade": "11.2.14",
+    "@fluentui/react": "^8.47.3",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "@ng-select/ng-select": "^6.1.0",
     "@types/highcharts": "^7.0.0",
