Fix AngularReactLib and Azure Pipelines for build

--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -5,23 +5,24 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "applens": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens --aot --optimization=false",
-    "ncloud-applens-prod": "ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
-    "ncloud-applens-local": "ng serve applens --configuration=nationalcloud-local --aot --optimization=false",
-    "ssl": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
-    "ssl-local": "npm run ssl -- -c local",
+    "applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens --aot --optimization=false",
+    "ncloud-applens-prod": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
+    "ncloud-applens-local": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-local --aot --optimization=false",
+    "ssl": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
+    "ssl-local": "npm run fixAngularReact && npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
-    "build-lib": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
-    "build-applens": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --prod",
-    "build-ncloud-applens-prod": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-production",
-    "build-ncloud-applens-local": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-local",
-    "build-asd": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --prod --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true",
+    "build-lib": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
+    "build-applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --prod",
+    "build-ncloud-applens-prod": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-production",
+    "build-ncloud-applens-local": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build applens --configuration=nationalcloud-local",
+    "build-asd": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build app-service-diagnostics --prod --deploy-url https://app-service-diagnostics-portal.azureedge.net/ --sourceMap=true",
     "build-ng-flowchart": "ng build ng-flowchart --prod",
-    "build": "npm run build-lib && npm run build-applens && npm run build-asd && npm run build-ng-flowchart",
+    "build": "npm run fixAngularReact && npm run build-lib && npm run build-applens && npm run build-asd && npm run build-ng-flowchart",
     "test": "ng test",
+    "fixAngularReact": "node fixAngularReactLib.js",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "lib": "ng build diagnostic-data --watch",
+    "lib": "npm run fixAngularReact && ng build diagnostic-data --watch",
     "generate-report": "ng build app-service-diagnostics --prod",
     "bundle-report": "webpack-bundle-analyzer ../Backend/wwwroot/stats.json -p 8889"
   },
