--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,12 +12,13 @@ pool:
 steps:
 - task: NodeTool@0
   inputs:
-    versionSpec: '14.18.x'
+    versionSpec: '16.6.x'
   displayName: 'Install Node.js'
 
 - script: |
     cd AngularApp
-    npm install -g @angular/cli@8.0.2
+    npm install -g npm@8.19.2
+    npm install -g @angular/cli@11.1.2
     npm install
     npm run build
   displayName: 'npm install and build'
