Fixing the Time picker component

--- a/AngularApp/projects/diagnostic-data/package.json
+++ b/AngularApp/projects/diagnostic-data/package.json
@@ -2,8 +2,8 @@
   "name": "diagnostic-data",
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "8.0.2",
-    "@angular/core": "8.0.2",
+    "@angular/common": "11.2.14",
+    "@angular/core": "11.2.14",
     "copy-html-to-clipboard": "^4.0.1",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "ngx-monaco-editor": "^6.0.0"
@@ -13,8 +13,8 @@
     "react-dom": "^16.8.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
-    "@angular-react/core": "^4.0.0",
-    "@angular-react/fabric": "^4.0.0",
+    "@angular-react/core": "~4.0.2",
+    "@angular-react/fabric": "~4.0.2",
     "office-ui-fabric-react": "^7.132.0",
     "@angular/common": "11.2.14",
     "@angular/core": "11.2.14",
