--- a/AngularApp/angular.json
+++ b/AngularApp/angular.json
@@ -51,7 +51,7 @@
               "node_modules/moment/min/moment.min.js",
               "node_modules/jquery/dist/jquery.min.js",
               "node_modules/admin-lte/dist/js/adminlte.js",
-              "node_modules/marked/lib/marked.js",
+              "node_modules/marked/marked.min.js",
               "node_modules/prismjs/prism.js",
               "node_modules/prismjs/components/prism-clike.min.js",
               "node_modules/prismjs/components/prism-csharp.min.js",
