--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -5,10 +5,10 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens --aot --optimization=false",
-    "ncloud-applens-prod": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-production --aot --optimization=false",
-    "ncloud-applens-local": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-local --aot --optimization=false",
-    "ssl": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --aot --optimization=false --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
+    "applens": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve applens",
+    "ncloud-applens-prod": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-production",
+    "ncloud-applens-local": "npm run fixAngularReact && ng serve applens --configuration=nationalcloud-local",
+    "ssl": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng serve --host 0.0.0.0 app-service-diagnostics --ssl --ssl-cert ./ssl/server.crt --ssl-key ./ssl/server.key",
     "ssl-local": "npm run fixAngularReact && npm run ssl -- -c local",
     "asd": "concurrently -k \"npm run ssl\" \"npm run lib\"",
     "build-lib": "npm run fixAngularReact && node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build diagnostic-data",
@@ -28,18 +28,24 @@
   },
   "dependencies": {
     "@angular-builders/custom-webpack": "^11.1.1",
-    "@angular-devkit/core": "^12.2.18",
-    "@angular/cdk": "^11.2.13",
-    "@angular/common": "12.2.16",
-    "@angular/compiler": "12.2.16",
-    "@angular/core": "12.2.16",
-    "@angular/forms": "^12.2.16",
-    "@angular/platform-browser": "^12.2.16",
-    "@angular/platform-browser-dynamic": "12.2.16",
-    "@angular/router": "12.2.16",
-    "@angular/upgrade": "12.2.16",
+    "@angular-devkit/build-angular": "^13.3.9",
+    "@angular-devkit/core": "^13.3.9",
+    "@angular-react/core": "^4.1.0",
+    "@angular-react/fabric": "^4.1.0",
+    "@angular/animations": "^13.3.11",
+    "@angular/cdk": "^13.3.9",
+    "@angular/common": "13.3.11",
+    "@angular/compiler": "13.3.11",
+    "@angular/core": "13.3.11",
+    "@angular/forms": "^13.3.11",
+    "@angular/material": "^13.3.9",
+    "@angular/platform-browser": "^13.3.11",
+    "@angular/platform-browser-dynamic": "13.3.11",
+    "@angular/router": "13.3.11",
+    "@angular/upgrade": "13.3.11",
     "@fluentui/react": "^8.47.3",
     "@microsoft/applicationinsights-web": "^2.5.4",
+    "@ng-select/ng-select": "^8.3.0",
     "@types/highcharts": "^7.0.0",
     "@types/react": "~16.8.6",
     "@types/react-dom": "^16.8.6",
@@ -63,6 +69,8 @@
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
     "ng5-slider": "^1.1.13",
+    "ngx-avatars": "^1.3.1",
+    "ngx-markdown": "^13.1.0",
     "ngx-monaco-editor": "^8.1.1",
     "ngx-smart-modal": "^6.0.4",
     "office-ui-fabric-core": "^11.0.0",
@@ -80,13 +88,12 @@
     "ua-parser-js": "^0.7.19",
     "vis": "^4.21.0",
     "vscode-ws-jsonrpc": "^0.2.0",
-    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular/cli": "12.2.18",
-    "@angular/compiler-cli": "12.2.16",
-    "@angular/language-service": "^12.2.16",
+    "@angular/cli": "13.3.9",
+    "@angular/compiler-cli": "13.3.11",
+    "@angular/language-service": "^13.3.11",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^12.11.1",
@@ -105,7 +112,7 @@
     "protractor": "~7.0.0",
     "selfsigned": "^1.10.2",
     "ts-node": "~4.1.0",
-    "typescript": "~4.3.5",
+    "typescript": "~4.6.4",
     "webpack-bundle-analyzer": "^3.6.0"
   }
 }
