--- a/AngularApp/package.json
+++ b/AngularApp/package.json
@@ -68,6 +68,7 @@
     "moment": "^2.22.1",
     "monaco-languageclient": "^0.13.0",
     "ng-in-viewport": "^6.1.0",
+    "ng-packagr": "^13.3.1",
     "ng5-slider": "^1.1.13",
     "ngx-avatars": "^1.3.1",
     "ngx-markdown": "^13.1.0",
