Fixing dynamic data to compile properly

--- a/AngularApp/projects/diagnostic-data/package.json
+++ b/AngularApp/projects/diagnostic-data/package.json
@@ -1,9 +1,10 @@
 {
   "name": "diagnostic-data",
+  "sideEffects": true,
   "version": "0.0.1",
   "peerDependencies": {
-    "@angular/common": "11.2.14",
-    "@angular/core": "11.2.14",
+    "@angular/common": "13.3.11",
+    "@angular/core": "13.3.11",
     "copy-html-to-clipboard": "^4.0.1",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "ngx-monaco-editor": "^6.0.0"
@@ -16,8 +17,8 @@
     "@angular-react/core": "~4.0.2",
     "@angular-react/fabric": "~4.0.2",
     "office-ui-fabric-react": "^7.132.0",
-    "@angular/common": "11.2.14",
-    "@angular/core": "11.2.14",
+    "@angular/common": "13.3.11",
+    "@angular/core": "13.3.11",
     "@microsoft/applicationinsights-web": "^2.5.4",
     "copy-html-to-clipboard": "^4.0.1",
     "ngx-monaco-editor": "^8.1.1",
