Added overview detector ids for Static Web Apps

--- a/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.web/staticsites/config.json
+++ b/AngularApp/projects/app-service-diagnostics/src/armResourceConfig/microsoft.web/staticsites/config.json
@@ -20,27 +20,32 @@
     {
       "id": "availabilityandperformancestaticapp",
       "name": "Availability and Performance",
-      "description": "Check your static web app's health and discover performance issues",
+      "description": "View health and performance stats",
       "keywords": [
         "Service Down",
-        "Platform Health"
+        "Platform Health",
+        "5xx",
+        "4xx",
+        "CDN"
       ],
       "color": "rgb(208, 175, 239)",
       "createFlowForCategory": true,
       "chatEnabled": false,
-      "overviewDetectorId": ""
+      "overviewDetectorId": "AvailabilityAndPerformanceOverview2"
     },
     {
       "id": "configurationandmanagementstaticapp",
       "name": "Configuration and Management",
-      "description": "Find out your static web app features are misconfigured",
+      "description": "See your app's configuration",
       "keywords": [
-        "Auth"
+        "Configuration",
+        "Management",
+        "Authentication"
       ],
       "color": "rgb(208, 175, 239)",
       "createFlowForCategory": true,
       "chatEnabled": false,
-      "overviewDetectorId": ""
+      "overviewDetectorId": "configurationAndManagementOverview2"
     },
     {
       "id": "contentdeploymentstaticapp",
@@ -52,7 +57,7 @@
       "color": "rgb(208, 175, 239)",
       "createFlowForCategory": true,
       "chatEnabled": false,
-      "overviewDetectorId": ""
+      "overviewDetectorId": "SWADeployment"
     }
   ],
   "pesId": "17265",
